<resources>
    <string name="app_name">Profsoft-Tasks-2024-Task2</string>
    <string name="second_activity_image_content_description">Картинка</string>
    <string name="profile">Профиль</string>
    <string name="edit_profile">Редактировать профиль</string>

    <string name="firstname">Иван</string>
    <string name="lastname">Иванов</string>
    <string name="patronymic">Иванович</string>
    <string name="date_of_birth">Дата рождения:</string>
    <string name="date">01.01.2001</string>
    <string name="city">Город</string>
    <string name="Saratov">Саратов</string>
    <string name="about_myself">О себе</string>
    <string name="coordinator">Координатор</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>