<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primary_color_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@string/second_activity_image_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/image"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintDimensionRatio="1"

        app:layout_constraintEnd_toStartOf="@id/textViewFirstName"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topView" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-12dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPatronymic"
        app:layout_constraintEnd_toEndOf="@+id/textViewDateOfBirth"
        app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
        app:layout_constraintTop_toTopOf="@+id/textViewFirstName" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/firstname"
        android:textSize="@dimen/textSize13"
        app:layout_constraintBottom_toTopOf="@+id/textViewLastName"
        app:layout_constraintEnd_toStartOf="@+id/textViewDateOfBirth"

        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toTopOf="@id/topView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/lastname"
        android:textSize="@dimen/textSize13"

        app:layout_constraintBottom_toTopOf="@+id/textViewPatronymic"
        app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

    <TextView
        android:id="@+id/textViewPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/patronymic"
        android:textSize="@dimen/textSize13"

        app:layout_constraintBottom_toBottomOf="@id/topView"
        app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

    <TextView
        android:id="@+id/textViewDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/date_of_birth"
        android:textSize="@dimen/textSize10"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
        app:layout_constraintTop_toTopOf="@+id/textViewFirstName" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_regular"

        android:text="@string/date"
        android:textSize="@dimen/textSize10"
        app:layout_constraintStart_toStartOf="@+id/textViewDateOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateOfBirth" />

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/city"
        android:textColor="@color/text_color_accent"
        android:textSize="@dimen/textSize14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topView" />

    <TextView
        android:id="@+id/textViewCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/Saratov"
        android:textColor="@color/text_color"
        android:textSize="@dimen/textSize14"
        app:layout_constraintStart_toStartOf="@id/textViewCity"
        app:layout_constraintTop_toBottomOf="@id/textViewCity" />

    <TextView
        android:id="@+id/textViewAboutMyself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/about_myself"
        android:textColor="@color/text_color_accent"
        android:textSize="@dimen/textSize14"
        app:layout_constraintStart_toStartOf="@id/textViewCity"
        app:layout_constraintTop_toBottomOf="@id/textViewCityName" />

    <TextView
        android:id="@+id/textViewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/example_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/textSize14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewCity"
        app:layout_constraintTop_toBottomOf="@id/textViewAboutMyself" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditProfile"
        style="@style/Widget.MaterialComponents.MyCenterButton.Blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>